samples/_failures_safe/1761217647_47442d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e3cb205.c: In function ‘main’:
./samples/SAFE/__tmp_1e3cb205.c:117:9: error: expected ‘,’ or ‘;’ at end of input
  117 |         for (int j = 0
      |         ^~~
./samples/SAFE/__tmp_1e3cb205.c:117:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1e3cb205.c:117:9: error: expected declaration or statement at end of input
